# renderBot

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: server.h
test/: CMakeLists.txt  sfml_raytracer_sample.cpp
